* Fix bug where HttpFile didn't work with domain only (http://host.com) urls (CC-614). Patch by J. David Beutel

Log4jThreadGroup
----------------------
* Spelling correction: "uncaugth" changed to "uncaught". Pointed out by Martin Sweitzer. 

Maven2Script
----------------------
* Fixed issue where passing more than one flag to Maven resulted in an error (CC-606). Patch by David Turanski.

MKS
----------------------
* Fix bug where modifications were returned from all previous builds, not just the current build (CC-628). Patch by Min Li

NantBuilderTest
----------------------
* Fixed bug in testing when path to data file contained spaces (CC-304). Patch by John Lewis.

PhingBuilder
----------------------
* Add new plug-in for PHP build tool Phing (CC-613). Submitted by Hans Lellelid.

PluginRegistry
----------------------
* Remove deprecated method PluginRegistry.getDefaultProperties(String pluginName).

Project
----------------------
* Add "projectname" property to properties passed to Builder.build().

ProjectConfig
----------------------
* Fixed a bug where ProjectConfig.stop() was calling Project.start() instead of Project.stop(). The effect of this would be for projects that have been removed from config.xml to continue to build.

Pvcs
----------------------
* Fixed bug where extra double quotes were being added to the call to pcli (CC-604). Patches by Karsten Wintermann and Dave Kilroy.

SSCM
----------------------
* Fixed bug that caused SSCM to NOT find Surround SCM modifications if email field is empty (CC-631). Fix suggested by Richie Yan & Bob.

StartTeam
----------------------
* Fixed issue that deleted Starteam-files were always detected as Modifications from a 'Unknown'-User, when the Locale was not English (CC-455). Patch by Markus Grieder, reviewed by Benjamin Burgess.

UCM
----------------------
* Added support for multiple vobs (CC-597). Patch by Mark Holster.

YahooPublisher
----------------------